# InfinityBackendPython

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  routes.txt
.github/workflows/: ci.yml
src/: main.py
src/application/: constants.py
src/application/decorators/: auth.py
src/application/dtos/: auth.py  common.py  launcher.py  login_history.py  minecraft_session.py  user.py  wardrobe.py
src/application/services/: auth.py  minecraft_profile.py
src/domain/entities/: base.py  launcher.py  login_history.py  minecraft_profile.py  minecraft_session.py  session.py  user.py  verification_code.py  wardrobe.py
src/domain/exceptions/: auth.py  base.py  launcher.py  minecraft.py  session.py  user.py  wardrobe.py
src/domain/interfaces/: unit_of_work.py
src/domain/utils/: crypto.py  storage_path.py
src/infrastructure/: config.py  unit_of_work.py
src/infrastructure/database/: metadata.py  session.py
src/infrastructure/redis/: base.py  minecraft_session_repo.py  verification_code_repo.py
src/infrastructure/repositories/: launcher_release_repo.py  login_history_repo.py  minecraft_profile_repo.py  session_repo.py  texture_catalog_repo.py  texture_repo.py  user_repo.py  wardrobe_item_repo.py
src/infrastructure/security/: tokens.py
src/infrastructure/services/: code_generator.py  console_email_service.py  email_service.py  file_storage.py  local_file_storage.py  profile_signer.py  string_hasher.py  texture_service.py  token_service.py
src/presentation/: exception_handlers.py
src/presentation/dependencies/: auth.py  db.py  services.py  uow.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/repositories/: test_launcher_release_repo.py  test_login_history_repo.py  test_minecraft_profile_repo.py  test_minecraft_session_repo.py  test_session_repo.py  test_texture_catalog_repo.py  test_user_repo.py  test_wardrobe_repo.py  (+1 more)
(+117 files in other folders)
